--- a/Day_007_HW.ipynb
+++ b/Day_007_HW.ipynb
@@ -848,15 +848,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ModeResult(mode=array([450000.]), count=array([26300]))\n"
+     ]
+    }
+   ],
    "source": [
     "# alternative method\n",
-    "import spicy as stats\n",
+    "from scipy import stats\n",
     "alt_mode=stats.mode(app_train['AMT_GOODS_PRICE'])\n",
     "print(alt_mode)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
