--- a/Day_012_HW.ipynb
+++ b/Day_012_HW.ipynb
@@ -163,14 +163,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IntervalIndex([(0, 10], (10, 20]],\n",
+      "IntervalIndex([(0, 10], (10, 20], (20, 30], (30, 50], (50, 100]],\n",
       "              closed='right',\n",
       "              dtype='interval[int64]')\n"
      ]
@@ -178,15 +178,15 @@
     {
      "data": {
       "text/plain": [
-       "10     8\n",
-       "20     4\n",
-       "30     2\n",
-       "100    1\n",
-       "50     1\n",
+       "(20, 30]     6\n",
+       "(50, 100]    3\n",
+       "(30, 50]     3\n",
+       "(10, 20]     2\n",
+       "(0, 10]      2\n",
        "Name: customized_age_grp, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
    "source": [
     "bins = pd.IntervalIndex.from_tuples([(0,10),(10,20),(20,30),(30,50),(50,100)])\n",
     "print(bins)\n",
-    "ages[\"customized_age_grp\"]= pd.cut(ages[\"age\"],5,bins,)\n",
+    "ages[\"customized_age_grp\"]= pd.cut(ages[\"age\"],bins)\n",
     "ages[\"customized_age_grp\"].value_counts()"
    ]
   },
