--- a/Day_016_HW.ipynb
+++ b/Day_016_HW.ipynb
@@ -354,17 +354,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/utils/deprecation.py:58: DeprecationWarning: Class Imputer is deprecated; Imputer was deprecated in version 0.20 and will be removed in 0.22. Import impute.SimpleImputer from sklearn instead.\n",
-      "  warnings.warn(msg, category=DeprecationWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -375,7 +367,9 @@
     }
    ],
    "source": [
-    "from sklearn.preprocessing import MinMaxScaler, Imputer\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "\n",
     "# 特徵欄位清單\n",
     "train = app_train\n",
@@ -385,7 +379,7 @@
     "test = app_test.copy()\n",
     "\n",
     "# 填補器 : 設定缺失值補中位數\n",
-    "imputer = Imputer(strategy = 'median')\n",
+    "imputer = SimpleImputer(strategy = 'median')\n",
     "\n",
     "# 縮放器 : 設定特徵縮放到 0~1 區間\n",
     "scaler = MinMaxScaler(feature_range = (0, 1))\n",
@@ -415,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +429,7 @@
        "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +550,7 @@
        "4      100038  0.128308"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,29 +559,16 @@
     "# 計算提交結果\n",
     "submit = app_test[['SK_ID_CURR']]\n",
     "submit['TARGET'] = log_reg_pred\n",
-    "\n",
     "submit.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'file_name' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-d6c56bf26464>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msubmit\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'file_name' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "submit.to_csv('day', sep='\\t', encoding='utf-8')"
+    "submit.to_csv('rickchang.csv',index=False, encoding='utf-8')"
    ]
   },
   {
