--- a/Day_018_HW.ipynb
+++ b/Day_018_HW.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "# 作業 : (Kaggle)鐵達尼生存預測精簡版 \n",
-    "https://www.kaggle.com/c/titanic"
+    "# 作業 : (Kaggle)鐵達尼生存預測"
    ]
   },
   {
@@ -13,7 +14,8 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 試著不依賴說明, 只依照下列程式碼回答下列問題, 初步理解什麼是\"特徵工程\"的區塊"
+    "- 試著完成三種不同特徵類型的三種資料操作, 觀察結果\n",
+    "- 思考一下, 這三種特徵類型, 哪一種應該最複雜/最難處理"
    ]
   },
   {
@@ -21,28 +23,13 @@
    "metadata": {},
    "source": [
     "# [作業重點]\n",
-    "- 試著不依賴註解, 以之前所學, 回答下列問題"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# 作業1\n",
-    "* 下列A~E五個程式區塊中，哪一塊是特徵工程?\n",
-    "\n",
-    "# 作業2\n",
-    "* 對照程式區塊 B 與 C 的結果，請問那些欄位屬於\"類別型欄位\"? (回答欄位英文名稱即可) \n",
-    "\n",
-    "# 作業3\n",
-    "* 續上題，請問哪個欄位是\"目標值\"?"
+    "- 完成剩餘的八種 類型 x 操作組合 (In[6]~In[13], Out[6]~Out[13])\n",
+    "- 思考何種特徵類型, 應該最複雜"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -51,17 +38,17 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 程式區塊 A\n",
+    "# 載入基本套件\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "\n",
+    "# 讀取訓練與測試資料\n",
     "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
@@ -70,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1035,13 +1022,13 @@
        "[1309 rows x 10 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 程式區塊 B\n",
+    "# 重組資料成為訓練 / 預測用格式\n",
     "train_Y = df_train['Survived']\n",
     "ids = df_test['PassengerId']\n",
     "df_train = df_train.drop(['PassengerId', 'Survived'] , axis=1)\n",
@@ -1052,10 +1039,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1078,170 +1063,183 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
+       "      <th>Column Type</th>\n",
+       "      <th>Count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.118683</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.283951</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.775862</td>\n",
-       "      <td>0.016072</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.218989</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.481481</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.879310</td>\n",
-       "      <td>0.140813</td>\n",
-       "      <td>0.575269</td>\n",
-       "      <td>0.333333</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.400459</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.984914</td>\n",
-       "      <td>0.017387</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.323124</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.125</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.070043</td>\n",
-       "      <td>0.105390</td>\n",
-       "      <td>0.381720</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.016845</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.444444</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.699353</td>\n",
-       "      <td>0.017630</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>object</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pclass      Name  Sex       Age  SibSp  Parch    Ticket      Fare  \\\n",
-       "0     1.0  0.118683  1.0  0.283951  0.125    0.0  0.775862  0.016072   \n",
-       "1     0.0  0.218989  0.0  0.481481  0.125    0.0  0.879310  0.140813   \n",
-       "2     1.0  0.400459  0.0  0.333333  0.000    0.0  0.984914  0.017387   \n",
-       "3     0.0  0.323124  0.0  0.444444  0.125    0.0  0.070043  0.105390   \n",
-       "4     1.0  0.016845  1.0  0.444444  0.000    0.0  0.699353  0.017630   \n",
-       "\n",
-       "      Cabin  Embarked  \n",
-       "0  0.000000  1.000000  \n",
-       "1  0.575269  0.333333  \n",
-       "2  0.000000  1.000000  \n",
-       "3  0.381720  1.000000  \n",
-       "4  0.000000  1.000000  "
+       "  Column Type  Count\n",
+       "0       int64      3\n",
+       "1     float64      2\n",
+       "2      object      5"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 程式區塊 C\n",
-    "LEncoder = LabelEncoder()\n",
-    "MMEncoder = MinMaxScaler()\n",
-    "for c in df.columns:\n",
-    "    df[c] = df[c].fillna(-1)\n",
-    "    if df[c].dtype == 'object':\n",
-    "        df[c] = LEncoder.fit_transform(list(df[c].values))\n",
-    "    df[c] = MMEncoder.fit_transform(df[c].values.reshape(-1, 1))\n",
-    "df.head()\n"
+    "# 秀出資料欄位的類型與數量\n",
+    "dtype_df = df.dtypes.reset_index()\n",
+    "dtype_df.columns = [\"Count\", \"Column Type\"]\n",
+    "dtype_df = dtype_df.groupby(\"Column Type\").aggregate('count').reset_index()\n",
+    "dtype_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 Integer Features : ['Pclass', 'SibSp', 'Parch']\n",
+      "\n",
+      "2 Float Features : ['Age', 'Fare']\n",
+      "\n",
+      "5 Object Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#確定只有 int64, float64, object 三種類型後, 分別將欄位名稱存於三個 list 中\n",
+    "int_features = []\n",
+    "float_features = []\n",
+    "object_features = []\n",
+    "for dtype, feature in zip(df.dtypes, df.columns):\n",
+    "    if dtype == 'float64':\n",
+    "        float_features.append(feature)\n",
+    "    elif dtype == 'int64':\n",
+    "        int_features.append(feature)\n",
+    "    else:\n",
+    "        object_features.append(feature)\n",
+    "print(f'{len(int_features)} Integer Features : {int_features}\\n')\n",
+    "print(f'{len(float_features)} Float Features : {float_features}\\n')\n",
+    "print(f'{len(object_features)} Object Features : {object_features}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# 作業1 \n",
+    "* 試著執行作業程式，觀察三種類型 (int / float / object) 的欄位分別進行( 平均 mean / 最大值 Max / 相異值 nunique )  \n",
+    "中的九次操作會有那些問題? 並試著解釋那些發生Error的程式區塊的原因?  \n",
+    "\n",
+    "# 作業2\n",
+    "* 思考一下，試著舉出今天五種類型以外的一種或多種資料類型，你舉出的新類型是否可以歸在三大類中的某些大類?  \n",
+    "所以三大類特徵中，哪一大類處理起來應該最複雜?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pclass    2.294882\n",
+       "SibSp     0.498854\n",
+       "Parch     0.385027\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 例 : 整數 (int) 特徵取平均 (mean)\n",
+    "df[int_features].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: float64)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 請依序列出 三種特徵類型 (int / float / object) x 三種方法 (平均 mean / 最大值 Max / 相異值 nunique) 的其餘操作\n",
+    "\"\"\"\n",
+    "Your Code Here\n",
+    "\"\"\"\n",
+    "df[int_features].mean()\n",
+    "df[int_features].max()\n",
+    "df[int_features].nunique()\n",
+    "\n",
+    "df[float_features].mean()\n",
+    "df[float_features].max()\n",
+    "df[float_features].nunique()\n",
+    "\n",
+    "# error occor because object can not be valued \n",
+    "df[object_features].mean()\n",
+    "df[object_features].max()\n",
+    "df[object_features].nunique()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-25-dba197687ff8>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-dba197687ff8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"object\" is the most difficult data type because it takes some time to figure out how to numeralize the data\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "String can be an object \n",
+    "# \"object\" is the most difficult data type because it takes some time to figure out how to numeralize the data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "# 程式區塊 D\n",
-    "train_num = train_Y.shape[0]\n",
-    "train_X = df[:train_num]\n",
-    "test_X = df[train_num:]\n",
-    "\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "estimator = LogisticRegression()\n",
-    "estimator.fit(train_X, train_Y)\n",
-    "pred = estimator.predict(test_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# 程式區塊 E\n",
-    "sub = pd.DataFrame({'PassengerId': ids, 'Survived': pred})\n",
-    "sub.to_csv('titanic_baseline.csv', index=False) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Q1\n",
-    "Block C \n",
-    "\n",
-    "# Q2\n",
-    "Name, Sex, Ticket, Cabin, Embarked\n",
-    "\n",
-    "# Q3\n",
-    "Survived"
-   ]
+   "source": []
   }
  ],
  "metadata": {
