--- a/Day_018_HW.ipynb
+++ b/Day_018_HW.ipynb
@@ -1217,21 +1217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-dba197687ff8>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-dba197687ff8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"object\" is the most difficult data type because it takes some time to figure out how to numeralize the data\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'object is the most difficult data type because it takes some time to figure out how to numeralize the data'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "String can be an object \n",
-    "# \"object\" is the most difficult data type because it takes some time to figure out how to numeralize the data"
+    "\"String can be an object\"\n",
+    "\"object is the most difficult data type because it takes some time to figure out how to numeralize the data\""
    ]
   },
   {
