--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "estimator = LinearRegression()\n",
+    "result = cross_val_score(estimator, train_X, train_Y, cv=5).mean()"
    ]
   },
   {
