--- a/Day_023_HW.ipynb
+++ b/Day_023_HW.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "source": [
     "# [作業目標]\n",
-    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察標籤編碼與獨編碼熱的影響"
+    "- 試著模仿範例寫法, 在鐵達尼生存預測中, 觀察均值編碼的效果"
    ]
   },
   {
@@ -23,8 +23,8 @@
    "metadata": {},
    "source": [
     "# [作業重點]\n",
-    "- 回答在範例中的觀察結果\n",
-    "- 觀察標籤編碼與獨熱編碼, 在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
+    "- 仿造範例, 完成標籤編碼與均值編碼搭配邏輯斯迴歸的預測\n",
+    "- 觀察標籤編碼與均值編碼在特徵數量 / 邏輯斯迴歸分數 / 邏輯斯迴歸時間上, 分別有什麼影響 (In[3], Out[3], In[4], Out[4]) "
    ]
   },
   {
@@ -34,8 +34,7 @@
    },
    "source": [
     "# 作業1\n",
-    "* 觀察範例，在房價預測中調整標籤編碼(Label Encoder) / 獨熱編碼 (One Hot Encoder) 方式，  \n",
-    "對於線性迴歸以及梯度提升樹兩種模型，何者影響比較大?"
+    "* 請仿照範例，將鐵達尼範例中的類別型特徵改用均值編碼實作一次"
    ]
   },
   {
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +290,7 @@
        "4            373450  None        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +317,7 @@
    },
    "source": [
     "# 作業2\n",
-    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)"
+    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
    ]
   },
   {
@@ -332,7 +331,7 @@
      "text": [
       "(891, 5)\n",
       "0.780004837244799\n",
-      "0.05275893211364746\n"
+      "0.04804682731628418\n"
      ]
     },
     {
@@ -353,6 +352,7 @@
     }
    ],
    "source": [
+    "# 對照組 : 標籤編碼 + 邏輯斯迴歸\n",
     "# 標籤編碼 + 羅吉斯迴歸\n",
     "\n",
     "\"\"\"\n",
@@ -371,60 +371,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(891, 2429)\n",
-      "0.8013346043513216\n",
-      "0.15665197372436523\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
+      "       0        Cabin Embarked  \\\n",
+      "0    NaN         None        S   \n",
+      "1    NaN          C85        C   \n",
+      "2    NaN         None        S   \n",
+      "3    NaN         C123        S   \n",
+      "4    NaN         None        S   \n",
+      "5    NaN         None        Q   \n",
+      "6    NaN          E46        S   \n",
+      "7    NaN         None        S   \n",
+      "8    NaN         None        S   \n",
+      "9    NaN         None        C   \n",
+      "10   NaN           G6        S   \n",
+      "11   NaN         C103        S   \n",
+      "12   NaN         None        S   \n",
+      "13   NaN         None        S   \n",
+      "14   NaN         None        S   \n",
+      "15   NaN         None        S   \n",
+      "16   NaN         None        Q   \n",
+      "17   NaN         None        S   \n",
+      "18   NaN         None        S   \n",
+      "19   NaN         None        C   \n",
+      "20   NaN         None        S   \n",
+      "21   NaN          D56        S   \n",
+      "22   NaN         None        Q   \n",
+      "23   NaN           A6        S   \n",
+      "24   NaN         None        S   \n",
+      "25   NaN         None        S   \n",
+      "26   NaN         None        C   \n",
+      "27   NaN  C23 C25 C27        S   \n",
+      "28   NaN         None        Q   \n",
+      "29   NaN         None        S   \n",
+      "..   ...          ...      ...   \n",
+      "861  0.0          NaN      NaN   \n",
+      "862  1.0          NaN      NaN   \n",
+      "863  0.0          NaN      NaN   \n",
+      "864  0.0          NaN      NaN   \n",
+      "865  1.0          NaN      NaN   \n",
+      "866  1.0          NaN      NaN   \n",
+      "867  0.0          NaN      NaN   \n",
+      "868  0.0          NaN      NaN   \n",
+      "869  1.0          NaN      NaN   \n",
+      "870  0.0          NaN      NaN   \n",
+      "871  1.0          NaN      NaN   \n",
+      "872  0.0          NaN      NaN   \n",
+      "873  0.0          NaN      NaN   \n",
+      "874  1.0          NaN      NaN   \n",
+      "875  1.0          NaN      NaN   \n",
+      "876  0.0          NaN      NaN   \n",
+      "877  0.0          NaN      NaN   \n",
+      "878  0.0          NaN      NaN   \n",
+      "879  1.0          NaN      NaN   \n",
+      "880  1.0          NaN      NaN   \n",
+      "881  0.0          NaN      NaN   \n",
+      "882  0.0          NaN      NaN   \n",
+      "883  0.0          NaN      NaN   \n",
+      "884  0.0          NaN      NaN   \n",
+      "885  0.0          NaN      NaN   \n",
+      "886  0.0          NaN      NaN   \n",
+      "887  1.0          NaN      NaN   \n",
+      "888  0.0          NaN      NaN   \n",
+      "889  1.0          NaN      NaN   \n",
+      "890  0.0          NaN      NaN   \n",
+      "\n",
+      "                                                  Name     Sex  \\\n",
+      "0                              Braund, Mr. Owen Harris    male   \n",
+      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
+      "2                               Heikkinen, Miss. Laina  female   \n",
+      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
+      "4                             Allen, Mr. William Henry    male   \n",
+      "5                                     Moran, Mr. James    male   \n",
+      "6                              McCarthy, Mr. Timothy J    male   \n",
+      "7                       Palsson, Master. Gosta Leonard    male   \n",
+      "8    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female   \n",
+      "9                  Nasser, Mrs. Nicholas (Adele Achem)  female   \n",
+      "10                     Sandstrom, Miss. Marguerite Rut  female   \n",
+      "11                            Bonnell, Miss. Elizabeth  female   \n",
+      "12                      Saundercock, Mr. William Henry    male   \n",
+      "13                         Andersson, Mr. Anders Johan    male   \n",
+      "14                Vestrom, Miss. Hulda Amanda Adolfina  female   \n",
+      "15                    Hewlett, Mrs. (Mary D Kingcome)   female   \n",
+      "16                                Rice, Master. Eugene    male   \n",
+      "17                        Williams, Mr. Charles Eugene    male   \n",
+      "18   Vander Planke, Mrs. Julius (Emelia Maria Vande...  female   \n",
+      "19                             Masselmani, Mrs. Fatima  female   \n",
+      "20                                Fynney, Mr. Joseph J    male   \n",
+      "21                               Beesley, Mr. Lawrence    male   \n",
+      "22                         McGowan, Miss. Anna \"Annie\"  female   \n",
+      "23                        Sloper, Mr. William Thompson    male   \n",
+      "24                       Palsson, Miss. Torborg Danira  female   \n",
+      "25   Asplund, Mrs. Carl Oscar (Selma Augusta Emilia...  female   \n",
+      "26                             Emir, Mr. Farred Chehab    male   \n",
+      "27                      Fortune, Mr. Charles Alexander    male   \n",
+      "28                       O'Dwyer, Miss. Ellen \"Nellie\"  female   \n",
+      "29                                 Todoroff, Mr. Lalio    male   \n",
+      "..                                                 ...     ...   \n",
+      "861                                                NaN     NaN   \n",
+      "862                                                NaN     NaN   \n",
+      "863                                                NaN     NaN   \n",
+      "864                                                NaN     NaN   \n",
+      "865                                                NaN     NaN   \n",
+      "866                                                NaN     NaN   \n",
+      "867                                                NaN     NaN   \n",
+      "868                                                NaN     NaN   \n",
+      "869                                                NaN     NaN   \n",
+      "870                                                NaN     NaN   \n",
+      "871                                                NaN     NaN   \n",
+      "872                                                NaN     NaN   \n",
+      "873                                                NaN     NaN   \n",
+      "874                                                NaN     NaN   \n",
+      "875                                                NaN     NaN   \n",
+      "876                                                NaN     NaN   \n",
+      "877                                                NaN     NaN   \n",
+      "878                                                NaN     NaN   \n",
+      "879                                                NaN     NaN   \n",
+      "880                                                NaN     NaN   \n",
+      "881                                                NaN     NaN   \n",
+      "882                                                NaN     NaN   \n",
+      "883                                                NaN     NaN   \n",
+      "884                                                NaN     NaN   \n",
+      "885                                                NaN     NaN   \n",
+      "886                                                NaN     NaN   \n",
+      "887                                                NaN     NaN   \n",
+      "888                                                NaN     NaN   \n",
+      "889                                                NaN     NaN   \n",
+      "890                                                NaN     NaN   \n",
+      "\n",
+      "               Ticket  \n",
+      "0           A/5 21171  \n",
+      "1            PC 17599  \n",
+      "2    STON/O2. 3101282  \n",
+      "3              113803  \n",
+      "4              373450  \n",
+      "5              330877  \n",
+      "6               17463  \n",
+      "7              349909  \n",
+      "8              347742  \n",
+      "9              237736  \n",
+      "10            PP 9549  \n",
+      "11             113783  \n",
+      "12          A/5. 2151  \n",
+      "13             347082  \n",
+      "14             350406  \n",
+      "15             248706  \n",
+      "16             382652  \n",
+      "17             244373  \n",
+      "18             345763  \n",
+      "19               2649  \n",
+      "20             239865  \n",
+      "21             248698  \n",
+      "22             330923  \n",
+      "23             113788  \n",
+      "24             349909  \n",
+      "25             347077  \n",
+      "26               2631  \n",
+      "27              19950  \n",
+      "28             330959  \n",
+      "29             349216  \n",
+      "..                ...  \n",
+      "861               NaN  \n",
+      "862               NaN  \n",
+      "863               NaN  \n",
+      "864               NaN  \n",
+      "865               NaN  \n",
+      "866               NaN  \n",
+      "867               NaN  \n",
+      "868               NaN  \n",
+      "869               NaN  \n",
+      "870               NaN  \n",
+      "871               NaN  \n",
+      "872               NaN  \n",
+      "873               NaN  \n",
+      "874               NaN  \n",
+      "875               NaN  \n",
+      "876               NaN  \n",
+      "877               NaN  \n",
+      "878               NaN  \n",
+      "879               NaN  \n",
+      "880               NaN  \n",
+      "881               NaN  \n",
+      "882               NaN  \n",
+      "883               NaN  \n",
+      "884               NaN  \n",
+      "885               NaN  \n",
+      "886               NaN  \n",
+      "887               NaN  \n",
+      "888               NaN  \n",
+      "889               NaN  \n",
+      "890               NaN  \n",
+      "\n",
+      "[1782 rows x 6 columns]\n"
      ]
     }
    ],
    "source": [
-    "# 獨熱編碼 + 羅吉斯迴歸\n",
-    "\n",
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\"\n",
-    "df_tmp = pd.get_dummies(df)\n",
-    "train_X = df_tmp[:train_num]\n",
+    "# 均值編碼 + 邏輯斯迴歸\n",
+    "data = pd.concat((df[:train_num],train_Y),axis=1)\n",
+    "for c in df.columns:\n",
+    "    mean_df = data.groupby([c])['Survived'].mean().reset_index()\n",
+    "    mean_df.columns = [c, f'{c}_mean']\n",
+    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
+    "    data = data.drop([c] , axis=1)\n",
+    "data = data.drop(['Survived'] , axis=1)\n",
     "estimator = LogisticRegression()\n",
     "start = time.time()\n",
-    "print(train_X.shape)\n",
-    "print(cross_val_score(estimator,train_X,train_Y,cv=5).mean())\n",
-    "print(time.time()-start)"
+    "print(f'shape : {train_X.shape}')\n",
+    "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "在logistic regression下 獨熱編碼分數較高，但花費時間和空間卻也較多"
-   ]
+   "source": []
   }
  ],
  "metadata": {
