--- a/Day_023_HW.ipynb
+++ b/Day_023_HW.ipynb
@@ -371,203 +371,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       0        Cabin Embarked  \\\n",
-      "0    NaN         None        S   \n",
-      "1    NaN          C85        C   \n",
-      "2    NaN         None        S   \n",
-      "3    NaN         C123        S   \n",
-      "4    NaN         None        S   \n",
-      "5    NaN         None        Q   \n",
-      "6    NaN          E46        S   \n",
-      "7    NaN         None        S   \n",
-      "8    NaN         None        S   \n",
-      "9    NaN         None        C   \n",
-      "10   NaN           G6        S   \n",
-      "11   NaN         C103        S   \n",
-      "12   NaN         None        S   \n",
-      "13   NaN         None        S   \n",
-      "14   NaN         None        S   \n",
-      "15   NaN         None        S   \n",
-      "16   NaN         None        Q   \n",
-      "17   NaN         None        S   \n",
-      "18   NaN         None        S   \n",
-      "19   NaN         None        C   \n",
-      "20   NaN         None        S   \n",
-      "21   NaN          D56        S   \n",
-      "22   NaN         None        Q   \n",
-      "23   NaN           A6        S   \n",
-      "24   NaN         None        S   \n",
-      "25   NaN         None        S   \n",
-      "26   NaN         None        C   \n",
-      "27   NaN  C23 C25 C27        S   \n",
-      "28   NaN         None        Q   \n",
-      "29   NaN         None        S   \n",
-      "..   ...          ...      ...   \n",
-      "861  0.0          NaN      NaN   \n",
-      "862  1.0          NaN      NaN   \n",
-      "863  0.0          NaN      NaN   \n",
-      "864  0.0          NaN      NaN   \n",
-      "865  1.0          NaN      NaN   \n",
-      "866  1.0          NaN      NaN   \n",
-      "867  0.0          NaN      NaN   \n",
-      "868  0.0          NaN      NaN   \n",
-      "869  1.0          NaN      NaN   \n",
-      "870  0.0          NaN      NaN   \n",
-      "871  1.0          NaN      NaN   \n",
-      "872  0.0          NaN      NaN   \n",
-      "873  0.0          NaN      NaN   \n",
-      "874  1.0          NaN      NaN   \n",
-      "875  1.0          NaN      NaN   \n",
-      "876  0.0          NaN      NaN   \n",
-      "877  0.0          NaN      NaN   \n",
-      "878  0.0          NaN      NaN   \n",
-      "879  1.0          NaN      NaN   \n",
-      "880  1.0          NaN      NaN   \n",
-      "881  0.0          NaN      NaN   \n",
-      "882  0.0          NaN      NaN   \n",
-      "883  0.0          NaN      NaN   \n",
-      "884  0.0          NaN      NaN   \n",
-      "885  0.0          NaN      NaN   \n",
-      "886  0.0          NaN      NaN   \n",
-      "887  1.0          NaN      NaN   \n",
-      "888  0.0          NaN      NaN   \n",
-      "889  1.0          NaN      NaN   \n",
-      "890  0.0          NaN      NaN   \n",
-      "\n",
-      "                                                  Name     Sex  \\\n",
-      "0                              Braund, Mr. Owen Harris    male   \n",
-      "1    Cumings, Mrs. John Bradley (Florence Briggs Th...  female   \n",
-      "2                               Heikkinen, Miss. Laina  female   \n",
-      "3         Futrelle, Mrs. Jacques Heath (Lily May Peel)  female   \n",
-      "4                             Allen, Mr. William Henry    male   \n",
-      "5                                     Moran, Mr. James    male   \n",
-      "6                              McCarthy, Mr. Timothy J    male   \n",
-      "7                       Palsson, Master. Gosta Leonard    male   \n",
-      "8    Johnson, Mrs. Oscar W (Elisabeth Vilhelmina Berg)  female   \n",
-      "9                  Nasser, Mrs. Nicholas (Adele Achem)  female   \n",
-      "10                     Sandstrom, Miss. Marguerite Rut  female   \n",
-      "11                            Bonnell, Miss. Elizabeth  female   \n",
-      "12                      Saundercock, Mr. William Henry    male   \n",
-      "13                         Andersson, Mr. Anders Johan    male   \n",
-      "14                Vestrom, Miss. Hulda Amanda Adolfina  female   \n",
-      "15                    Hewlett, Mrs. (Mary D Kingcome)   female   \n",
-      "16                                Rice, Master. Eugene    male   \n",
-      "17                        Williams, Mr. Charles Eugene    male   \n",
-      "18   Vander Planke, Mrs. Julius (Emelia Maria Vande...  female   \n",
-      "19                             Masselmani, Mrs. Fatima  female   \n",
-      "20                                Fynney, Mr. Joseph J    male   \n",
-      "21                               Beesley, Mr. Lawrence    male   \n",
-      "22                         McGowan, Miss. Anna \"Annie\"  female   \n",
-      "23                        Sloper, Mr. William Thompson    male   \n",
-      "24                       Palsson, Miss. Torborg Danira  female   \n",
-      "25   Asplund, Mrs. Carl Oscar (Selma Augusta Emilia...  female   \n",
-      "26                             Emir, Mr. Farred Chehab    male   \n",
-      "27                      Fortune, Mr. Charles Alexander    male   \n",
-      "28                       O'Dwyer, Miss. Ellen \"Nellie\"  female   \n",
-      "29                                 Todoroff, Mr. Lalio    male   \n",
-      "..                                                 ...     ...   \n",
-      "861                                                NaN     NaN   \n",
-      "862                                                NaN     NaN   \n",
-      "863                                                NaN     NaN   \n",
-      "864                                                NaN     NaN   \n",
-      "865                                                NaN     NaN   \n",
-      "866                                                NaN     NaN   \n",
-      "867                                                NaN     NaN   \n",
-      "868                                                NaN     NaN   \n",
-      "869                                                NaN     NaN   \n",
-      "870                                                NaN     NaN   \n",
-      "871                                                NaN     NaN   \n",
-      "872                                                NaN     NaN   \n",
-      "873                                                NaN     NaN   \n",
-      "874                                                NaN     NaN   \n",
-      "875                                                NaN     NaN   \n",
-      "876                                                NaN     NaN   \n",
-      "877                                                NaN     NaN   \n",
-      "878                                                NaN     NaN   \n",
-      "879                                                NaN     NaN   \n",
-      "880                                                NaN     NaN   \n",
-      "881                                                NaN     NaN   \n",
-      "882                                                NaN     NaN   \n",
-      "883                                                NaN     NaN   \n",
-      "884                                                NaN     NaN   \n",
-      "885                                                NaN     NaN   \n",
-      "886                                                NaN     NaN   \n",
-      "887                                                NaN     NaN   \n",
-      "888                                                NaN     NaN   \n",
-      "889                                                NaN     NaN   \n",
-      "890                                                NaN     NaN   \n",
-      "\n",
-      "               Ticket  \n",
-      "0           A/5 21171  \n",
-      "1            PC 17599  \n",
-      "2    STON/O2. 3101282  \n",
-      "3              113803  \n",
-      "4              373450  \n",
-      "5              330877  \n",
-      "6               17463  \n",
-      "7              349909  \n",
-      "8              347742  \n",
-      "9              237736  \n",
-      "10            PP 9549  \n",
-      "11             113783  \n",
-      "12          A/5. 2151  \n",
-      "13             347082  \n",
-      "14             350406  \n",
-      "15             248706  \n",
-      "16             382652  \n",
-      "17             244373  \n",
-      "18             345763  \n",
-      "19               2649  \n",
-      "20             239865  \n",
-      "21             248698  \n",
-      "22             330923  \n",
-      "23             113788  \n",
-      "24             349909  \n",
-      "25             347077  \n",
-      "26               2631  \n",
-      "27              19950  \n",
-      "28             330959  \n",
-      "29             349216  \n",
-      "..                ...  \n",
-      "861               NaN  \n",
-      "862               NaN  \n",
-      "863               NaN  \n",
-      "864               NaN  \n",
-      "865               NaN  \n",
-      "866               NaN  \n",
-      "867               NaN  \n",
-      "868               NaN  \n",
-      "869               NaN  \n",
-      "870               NaN  \n",
-      "871               NaN  \n",
-      "872               NaN  \n",
-      "873               NaN  \n",
-      "874               NaN  \n",
-      "875               NaN  \n",
-      "876               NaN  \n",
-      "877               NaN  \n",
-      "878               NaN  \n",
-      "879               NaN  \n",
-      "880               NaN  \n",
-      "881               NaN  \n",
-      "882               NaN  \n",
-      "883               NaN  \n",
-      "884               NaN  \n",
-      "885               NaN  \n",
-      "886               NaN  \n",
-      "887               NaN  \n",
-      "888               NaN  \n",
-      "889               NaN  \n",
-      "890               NaN  \n",
-      "\n",
-      "[1782 rows x 6 columns]\n"
+      "shape : (891, 5)\n",
+      "score : 1.0\n",
+      "time : 0.04361987113952637 sec\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
      ]
     }
    ],
