--- a/Day_031_HW.ipynb
+++ b/Day_031_HW.ipynb
@@ -56,12 +56,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '透過機器學習辨識聲音' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-f02f69538dd3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m透過機器學習辨識聲音\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name '透過機器學習辨識聲音' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#用機器學習辨識聲音，分析樂器種類，和弦，曲風等等"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "透過機器學習辨識聲音，   "
-   ]
+   "source": []
   }
  ],
  "metadata": {
