--- a/Day_032_HW.ipynb
+++ b/Day_032_HW.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "2. NLP (sequence to sequence network)\n",
     "\n",
-    "3. "
+    "3. spectrograms as input, neural vocoder, speaker encoder"
    ]
   },
   {
