--- a/Day_033_HW.ipynb
+++ b/Day_033_HW.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "1. 使training data的function 可以fit testing data的過程\n",
-    "2. 回歸問題: MSE , 分類問題: "
+    "2. 基於Loss function 回歸問題: MSE , 分類問題: cross-entropy"
    ]
   }
  ],
