--- a/Day_040_HW.ipynb
+++ b/Day_040_HW.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,8 @@
       "correlation [-1.15966452e-01  4.71249231e-02  8.25980146e-03  3.23404531e+00\n",
       " -1.66865890e+01  3.88410651e+00 -1.08974442e-02 -1.54129540e+00\n",
       "  2.93208309e-01 -1.34059383e-02 -9.06296429e-01  8.80823439e-03\n",
-      " -4.57723846e-01]\n"
+      " -4.57723846e-01]\n",
+      "MSE 25.41958712682169\n"
      ]
     }
    ],
@@ -72,7 +73,7 @@
     "y_pred = regr.predict(x_test)\n",
     "print(y_pred)\n",
     "print('correlation',regr.coef_)\n",
-    "print('MSE')"
+    "print('MSE',mean_squared_error(y_test,y_pred))"
    ]
   },
   {
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +111,8 @@
       " 23.28759394 27.27002112 12.87684941 23.2308715   8.70976844 24.14599481]\n",
       "correlation [-0.06494981  0.04581458 -0.          0.         -0.          1.18140024\n",
       "  0.01109101 -0.73695809  0.23350042 -0.01551065 -0.69270805  0.00763157\n",
-      " -0.6927848 ]\n"
+      " -0.6927848 ]\n",
+      "MSE 28.95051203673903\n"
      ]
     }
    ],
@@ -121,7 +123,8 @@
     "lasso.fit(x_train,y_train)\n",
     "y_pred = lasso.predict(x_test)\n",
     "print(y_pred)\n",
-    "print('correlation',lasso.coef_)"
+    "print('correlation',lasso.coef_)\n",
+    "print('MSE',mean_squared_error(y_test,y_pred))"
    ]
   },
   {
@@ -133,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +163,8 @@
       "correlation [-1.12499445e-01  4.79562332e-02 -2.40438147e-02  2.96199458e+00\n",
       " -9.33966118e+00  3.93079015e+00 -1.73821202e-02 -1.43347691e+00\n",
       "  2.75239392e-01 -1.38920708e-02 -8.31116943e-01  9.15637729e-03\n",
-      " -4.66460539e-01]\n"
+      " -4.66460539e-01]\n",
+      "MSE 25.743684080012542\n"
      ]
     }
    ],
@@ -171,7 +175,8 @@
     "ridge.fit(x_train,y_train)\n",
     "y_pred = ridge.predict(x_test)\n",
     "print(y_pred)\n",
-    "print('correlation',ridge.coef_)"
+    "print('correlation',ridge.coef_)\n",
+    "print('MSE',mean_squared_error(y_test,y_pred))"
    ]
   },
   {
