--- a/Day_041_HW.ipynb
+++ b/Day_041_HW.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "## 回答\n",
     "1. not sure\n",
-    "2. 回歸問題為適合用回歸解決(丟"
+    "2. 回歸問題為適合用回歸解決(丟x預測y) 若target answer 可以拆成離散資料，決策樹則可解決該問題"
    ]
   }
  ],
