--- a/Day_042_HW.ipynb
+++ b/Day_042_HW.ipynb
@@ -32,14 +32,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acuuracy:  0.9629629629629629\n"
+      "Acuuracy:  0.9259259259259259\n",
+      "Accuracy:  0.9629629629629629\n"
      ]
     }
    ],
@@ -49,13 +50,15 @@
     "clf = DecisionTreeClassifier()\n",
     "clf.fit(x_train,y_train)\n",
     "y_pred = clf.predict(x_test)\n",
-    "acc = metrics.accuracy_score(y_test, y_pred)\n",
-    "print(\"Acuuracy: \", acc)\n",
+    "acc1 = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Acuuracy: \", acc1)\n",
     "\n",
     "# with criterion='entropy' parameter \n",
     "clf_entropy = DecisionTreeClassifier(criterion='entropy')\n",
     "clf_entropy.fit(x_train,y_train)\n",
-    "y_pred = clf"
+    "y_pred = clf_entropy.predict(x_test)\n",
+    "acc2 = metrics.accuracy_score(y_test,y_pred)\n",
+    "print('Accuracy: ',acc2)"
    ]
   },
   {
