--- a/Day_043_HW.ipynb
+++ b/Day_043_HW.ipynb
@@ -40,8 +40,23 @@
    "metadata": {},
    "source": [
     "## 回答\n",
-    "(N/2)+1"
+    "from wiki: https://zh.wikipedia.org/zh-tw/%E8%87%AA%E5%8A%A9%E6%B3%95\n",
+    "最常用的一種是.632自助法，假設給定的數據集包含d個樣本。該數據集有放回地抽樣d次，產生d個樣本的訓練集。這樣原數據樣本中的某些樣本很可能在該樣本集中出現多次。沒有進入該訓練集的樣本最終形成檢驗集（測試集）。 顯然每個樣本被選中的概率是1/d，因此未被選中的概率就是(1-1/d)，這樣一個樣本在訓練集中沒出現的概率就是d次都未被選中的概率，即(1-1/d)d。當d趨於無窮大時，這一概率就將趨近於e-1=0.368，所以留在訓練集中的樣本大概就占原來數據集的63.2%。\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
